Completed Problem Sets #1-2

--- a/Hackwich Eight/Base.lproj/Main.storyboard
+++ b/Hackwich Eight/Base.lproj/Main.storyboard
@@ -23,12 +23,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="72R-Ek-Jk1">
+                                <rect key="frame" x="58" y="409" width="274" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Egw-61-k0C">
-                                <rect key="frame" x="74" y="515" width="247" height="31"/>
+                                <rect key="frame" x="74" y="515" width="247" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="First"/>
                                     <segment title="Second"/>
+                                    <segment title="Third"/>
                                 </segments>
                                 <connections>
                                     <action selector="segmentedControlPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="QVY-bY-rxT"/>
@@ -41,6 +48,7 @@
                     <connections>
                         <outlet property="mylabel" destination="Nb4-pD-mWP" id="iZG-IX-A8L"/>
                         <outlet property="segmentedControl" destination="Egw-61-k0C" id="qjs-nv-sdQ"/>
+                        <outlet property="textField" destination="72R-Ek-Jk1" id="7BF-gL-yOY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
